--- a/frontend/portfolio-app/src/css/Custom.css
+++ b/frontend/portfolio-app/src/css/Custom.css
@@ -54,6 +54,10 @@ body {
     background-color: ghostwhite;
 }
 
+.offcanvas-header {
+    background-color: grey;
+}
+
 
 /* ABOUT SECTION */
 
@@ -62,4 +66,15 @@ body {
     text-align: center;
     font-size: 1.5em;
     padding: 50px;
+}
+
+
+/* FOOTER */
+
+#footer {
+    background-color: grey;
+    color: ghostwhite;
+    text-align: center;
+    padding: 10px;
+    font-size: 1.2em;
 }
