Feat: Create a management page and start work on a new project form.  Fix issues with DataSeeder and empty the database.

--- a/frontend/portfolio-app/src/css/Custom.css
+++ b/frontend/portfolio-app/src/css/Custom.css
@@ -65,9 +65,9 @@ body {
 }
 
 
-/* ABOUT SECTION */
+/* CONTENT SECTIONS */
 
-.about-section {
+.content-section {
     background-color: ghostwhite;
     text-align: center;
     font-size: 1.5em;
