--- a/frontend/portfolio-app/src/css/Custom.css
+++ b/frontend/portfolio-app/src/css/Custom.css
@@ -22,12 +22,22 @@
         color: var(--text-color-light);
     }
 
+    a {
+        color: var(--text-color-light);
+    }
+
+    a:hover {
+        color: var(--hover-color-light);
+    }
+
     .content-section {
         background-color: var(--background-color-light);
+        box-shadow: 3px 0 7px -3px #3a3a3a, -3px 0 7px -3px #3a3a3a;
     }
 
     .navbar {
         background-color: var(--highlight-color-light);
+        box-shadow: 3px 0 7px -3px #3a3a3a, -3px 0 7px -3px #3a3a3a;
     }
 
     .navbar-brand {
@@ -50,8 +60,13 @@
         color: var(--text-color-light);
     }
 
+    .card {
+        box-shadow: 0 0 3px #3a3a3a;
+    }
+
     #footer {
         background-color: var(--highlight-color-light);
+        box-shadow: 3px 0 7px -3px #3a3a3a, -3px 0 7px -3px #3a3a3a;
     }
 }
 
@@ -64,13 +79,23 @@
         color: var(--text-color-dark);
     }
 
+    a {
+        color: var(--text-color-dark);
+    }
+
+    a:hover {
+        color: var(--hover-color-dark);
+    }
+
     .content-section {
         background-color: var(--background-color-dark);
         color: var(--text-color-dark);
+        box-shadow: 3px 0 7px -3px #000000, -3px 0 7px -3px #000000;
     }
 
     .navbar {
         background-color: var(--highlight-color-dark);
+        box-shadow: 3px 0 7px -3px #000000, -3px 0 7px -3px #000000;
     }
 
     .navbar-brand {
@@ -131,6 +156,7 @@
     .card {
         background-color: var(--highlight-color-dark);
         color: var(--text-color-dark);
+        box-shadow: 0 0 3px #000000;
     }
 
     .link {
@@ -161,6 +187,7 @@
     #footer {
         background-color: var(--highlight-color-dark);
         color: var(--text-color-dark);
+        box-shadow: 3px 0 7px -3px #000000, -3px 0 7px -3px #000000;
     }
 }
 
@@ -189,8 +216,17 @@
     border-radius: 5px 5px;
 }
 
+.accordion {
+    margin-bottom: 25px;
+}
+
 .bars-icon {
     font-size: 1.5em;
+}
+
+.socials-icon {
+    font-size: 2.5em;
+    margin:10px;
 }
 
 
@@ -209,5 +245,4 @@
     text-align: center;
     padding: 10px;
     font-size: 1.2em;
-    box-shadow: 0 3px 7px #000000;
 }
